<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Interest Destroyer</string>
    <string name="interest_logo">Intere$t De$troyer</string>
    <string name="info_gathering">Basic information</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Gathering Information</string>
    <string name="title_activity_amortization">Amortization Details</string>
    <string name="title_activity_results_chart">Chart of Results</string>
    <string name="get_results">Get Results</string>
    <string name="title_activity_extra_payments_chart">Extra Payments Chart</string>
    <string name="title_activity_bar_chart">Bar Chart</string>
    <string name="principal_hint">Principal remaining?</string>
    <string name="interest_hint">Interest rate?</string>
    <string name="months_hint">Months remaining?</string>
    <string name="extra_payment_hint">Extra payment amount?</string>
    <string name="title_activity_options">Choose an Option</string>
    <string name="content_desc">Content Description</string>
    <string name="interest_saved">Interest Saved: </string>
    <string name="years_saved">Years Saved: </string>
    <string name="results_ready">Your results are ready!</string>
    <string name="what_next">What would you like to do now?</string>
    <string name="amortization">Amortization:</string>
    <string name="amortization_UI">Amortization</string>
    <string name="see_graphical_results">See graphical results</string>
    <string name="see_amortization">See amortization schedule</string>
    <string name="email_amortization">E-MAIL Amortization Schedule</string>
    <string name="please_choose_UI">Please choose an option:</string>
    <string name="see_buy_down_effect">See graphical effect of buy down points.</string>
    <string name="share_on_facebook">Share on Facebook.</string>
    <string name="email_results">EMAIL Results</string>
    <string name="email_results_UI">Send Results via EMAIL</string>
    <string name="savings_UI">How much can I save by paying extra?</string>
    <string name="principal_vs_extra">Minimum payment vs. extra payment amount applied to principal</string>
    <string name="title_activity_splash_screen">Splash Screen</string>
    <string name="about">About Interest Destroyer</string>
    <string name="title_activity_about">About Interest Destroyer</string>
    <string name="software_designer">Creator: Azadi Bogolubov</string>
    <string name="creator_website">Website: http://www.tutorazadi.com</string>
    <string name="software_designer_company">Tutor Azadi</string>
    <string name="graphic_designer">Graphics Designer: Shane Tebeck</string>
    <string name="graphic_designer_company">The Escape Artists</string>
    <string name="fonts">Fonts:</string>
    <string name="arimo">Arimo: www.google.com/fonts/specimen/Arimo</string>
    <string name="parisish">Parisish: www.fontspace.com/george-williams/parisish</string>
    <string name="charting_engine">Charting Engine:</string>
    <string name="achartengine">AChartEngine: www.achartengine.org</string>
    <string name="title_activity_info_gathering">Information Gathering</string>

    <string name="title_activity_extra_savings">See your Extra Savings</string>
    <string name="title_activity_skins">Choose a Skin</string>
    <string name="title_activity_new_extra_payment_chart">Extra Payment Chart</string>

    <string name="app_description">This app will teach you how much money you can save on interest by making extra payments on your loan. Please click the button to choose an option and start your journey.</string>
    <string name="title_activity_results">ResultsActivity</string>

    <string name="savings_tab">Amortization</string>
    <string name="graph_tab">Graphical</string>

    <string name="savings_amount">By sending extra, you will save:</string>
    <string name="amortization_ready">Amortization Results!</string>
    <string name="results_delivery">How would you like to receive your results?</string>

    <string name="email">Email</string>
    <string name="amortization_subject">Your Amortization Schedule from Interest Destroyer</string>
    <string name="print">Print</string>

</resources>
