<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/mainLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/primary"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/text_icons"
            android:text="@string/info_gathering"
            android:textSize="36sp"/>

        <EditText
            android:id="@+id/principalTxt"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:hint="@string/principal_hint"
            android:textColor="@color/text_icons"
            android:textColorHint="@color/text_icons">

            <requestFocus/>
        </EditText>

        <EditText
            android:id="@+id/interestTxt"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:hint="@string/interest_hint"
            android:textColor="@color/text_icons"
            android:textColorHint="@color/text_icons"/>

        <EditText
            android:id="@+id/numMonthsTxt"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:hint="@string/months_hint"
            android:textColor="@color/text_icons"
            android:textColorHint="@color/text_icons"/>

        <EditText
            android:id="@+id/extraPaymentTxt"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:hint="@string/extra_payment_hint"
            android:textColor="@color/text_icons"
            android:textColorHint="@color/text_icons"/>

        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_gravity="bottom|right"
        android:layout_margin="16dp"
        android:src="@drawable/dollarsign"
        android:clickable="true"
        app:backgroundTint="@color/accent"
        app:elevation="8dp"/>

</android.support.design.widget.CoordinatorLayout>
